fixed client profile and shifted footers

--- a/styles.css
+++ b/styles.css
@@ -1154,6 +1154,12 @@ h1{
         width: 100%;
         margin: 0 auto;
     }
+    .user__reviews {
+        text-align: center;
+        width: 100%;
+        padding-right: 24px;
+        margin: 0 auto;
+    }
     .testimonial__para {
         text-align: center;
         align-items: center;
@@ -1163,13 +1169,13 @@ h1{
     .client__section {
         align-items: center;
         justify-content: space-between;
-        padding: 12px 56px 0 0;
+        padding: 12px 56px 0 18px;
         width: 100%;
         margin: 0 auto;
     }
     .start__container {
-        width: 90%;
-        margin: 56px auto;
+        padding: 96px 0;
+        
     }
     .start__row {
         flex-direction: column;
@@ -1187,15 +1193,27 @@ h1{
         text-align: center;
     }
     .footer__row {
-        /* width: 80%; */
-        width: 100%;
-        height: 100%;
-    }
-    /* .footer__columns {
-        display: flex;
         flex-wrap: wrap;
+        width: calc(100% / 3);
+        justify-content: space-around;
+        text-align: center;
+        width: 50%;
+        height: 50%;
+    }
+    .footer__main, .footer__product {
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        
+    }
+    .footer__columns {
+        display: flex;
+        align-items: center;
         justify-content: space-between;
-    } */
+        width: calc(100%/2);
+        flex-wrap: wrap;
+        margin-left: 10px;
+    }
     .footer__bottom {
         flex-direction: column;
         align-items: center;
@@ -1203,5 +1221,6 @@ h1{
     }
     .footer__copyright, .footer__logo {
         padding-bottom: 20px;
+        text-align: center;
     }
 }
